// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonitorList component renders a no items message when no data is provided 1`] = `
<Fragment>
  <EuiPanel>
    <EuiTitle
      size="xs"
    >
      <h5>
        <FormattedMessage
          defaultMessage="Monitor status"
          id="xpack.uptime.monitorList.monitoringStatusTitle"
          values={Object {}}
        />
      </h5>
    </EuiTitle>
    <EuiSpacer
      size="s"
    />
    <EuiBasicTable
      columns={
        Array [
          Object {
            "align": "left",
            "field": "state.monitor.status",
            "name": "Status",
            "render": [Function],
          },
          Object {
            "align": "left",
            "field": "state.monitor.name",
            "name": "Name",
            "render": [Function],
            "sortable": true,
          },
          Object {
            "align": "left",
            "field": "state.url.full",
            "name": "URL",
            "render": [Function],
            "sortable": true,
          },
          Object {
            "field": "histogram.points",
            "mobileOptions": Object {
              "show": false,
            },
            "name": "Downtime history",
            "render": [Function],
          },
          Object {
            "align": "right",
            "field": "state",
            "hasActions": true,
            "id": "actions",
            "mobileOptions": Object {
              "header": false,
            },
            "name": "Integrations",
            "render": [Function],
          },
          Object {
            "align": "left",
            "field": "monitor_id",
            "isExpander": true,
            "name": "",
            "render": [Function],
            "sortable": true,
            "width": "40px",
          },
        ]
      }
      hasActions={true}
      isExpandable={true}
      itemId="monitor_id"
      itemIdToExpandedRowMap={Object {}}
      items={Array []}
      loading={false}
      noItemsMessage="No uptime monitors found"
      responsive={true}
    />
    <EuiFlexItem
      grow={false}
    >
      <EuiFlexGroup>
        <EuiFlexItem>
          <span>
            <EuiIcon
              color="ghost"
              type="arrowLeft"
            />
            <EuiIcon
              color="ghost"
              type="arrowRight"
            />
          </span>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
  </EuiPanel>
</Fragment>
`;

exports[`MonitorList component renders the monitor list 1`] = `
<Fragment>
  <EuiPanel>
    <EuiTitle
      size="xs"
    >
      <h5>
        <FormattedMessage
          defaultMessage="Monitor status"
          id="xpack.uptime.monitorList.monitoringStatusTitle"
          values={Object {}}
        />
      </h5>
    </EuiTitle>
    <EuiSpacer
      size="s"
    />
    <EuiBasicTable
      columns={
        Array [
          Object {
            "align": "left",
            "field": "state.monitor.status",
            "name": "Status",
            "render": [Function],
          },
          Object {
            "align": "left",
            "field": "state.monitor.name",
            "name": "Name",
            "render": [Function],
            "sortable": true,
          },
          Object {
            "align": "left",
            "field": "state.url.full",
            "name": "URL",
            "render": [Function],
            "sortable": true,
          },
          Object {
            "field": "histogram.points",
            "mobileOptions": Object {
              "show": false,
            },
            "name": "Downtime history",
            "render": [Function],
          },
          Object {
            "align": "right",
            "field": "state",
            "hasActions": true,
            "id": "actions",
            "mobileOptions": Object {
              "header": false,
            },
            "name": "Integrations",
            "render": [Function],
          },
          Object {
            "align": "left",
            "field": "monitor_id",
            "isExpander": true,
            "name": "",
            "render": [Function],
            "sortable": true,
            "width": "40px",
          },
        ]
      }
      hasActions={true}
      isExpandable={true}
      itemId="monitor_id"
      itemIdToExpandedRowMap={Object {}}
      items={
        Array [
          Object {
            "monitor_id": "foo",
            "state": Object {
              "checks": Array [
                Object {
                  "monitor": Object {
                    "ip": "127.0.0.1",
                    "status": "up",
                  },
                  "timestamp": "124",
                },
                Object {
                  "monitor": Object {
                    "ip": "127.0.0.2",
                    "status": "down",
                  },
                  "timestamp": "125",
                },
                Object {
                  "monitor": Object {
                    "ip": "127.0.0.3",
                    "status": "down",
                  },
                  "timestamp": "126",
                },
              ],
              "summary": Object {
                "down": 2,
                "up": 1,
              },
              "timestamp": "123",
            },
          },
          Object {
            "monitor_id": "bar",
            "state": Object {
              "checks": Array [
                Object {
                  "monitor": Object {
                    "ip": "127.0.0.1",
                    "status": "up",
                  },
                  "timestamp": "125",
                },
                Object {
                  "monitor": Object {
                    "ip": "127.0.0.2",
                    "status": "up",
                  },
                  "timestamp": "126",
                },
              ],
              "summary": Object {
                "down": 0,
                "up": 2,
              },
              "timestamp": "125",
            },
          },
        ]
      }
      loading={false}
      noItemsMessage="No uptime monitors found"
      responsive={true}
    />
    <EuiFlexItem
      grow={false}
    >
      <EuiFlexGroup>
        <EuiFlexItem>
          <span>
            <OverviewPageLink
              pagination="{\\"cursorKey\\":{\\"monitor_id\\":123},\\"cursorDirection\\":\\"BEFORE\\",\\"sortOrder\\":\\"ASC\\"}"
            >
              <EuiIcon
                type="arrowLeft"
              />
            </OverviewPageLink>
            <OverviewPageLink
              pagination="{\\"cursorKey\\":{\\"monitor_id\\":456},\\"cursorDirection\\":\\"AFTER\\",\\"sortOrder\\":\\"ASC\\"}"
            >
              <EuiIcon
                type="arrowRight"
              />
            </OverviewPageLink>
          </span>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
  </EuiPanel>
</Fragment>
`;
